<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">SafeWalk</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="submit">Submit</string>
    <string name="match">Match</string>
    <string name="start_over">Start Over</string>
    <string name="default_host">10.0.2.2</string>
    <string name="default_port">8888</string>
    <string name="default_command">:FAKE_COMMAND</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="name">Name</string>
    <string name="preferences">Preferences</string>
    <string name="type1">I am a requester. Match me with volunteers only</string>
    <string name="type2">I am a volunteer. Font match me with an other volunteer</string>
    <string name="type0">I have no preference being a requester or a volunteer</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="CL50">CL50 - Class of 1950 Lecture Hall</string>
	<string name="EE">EE - Electrical Engineering</string>
	<string name="LWSN">LWSN - Lawson</string>
	<string name="PMU">PMU - The Union</string>
	<string name="PUSH">PUSH - Purdue University Student Health</string>
	<string name="Star">* - Anywhere</string>
	
    
    
    <string name="to_prompt">Where to go?</string>
    <string name="from_prompt">Where are you?</string>
    <string name="default_name"></string>
    

</resources>